Fix modal dimming with radical approach and fix favicon
1. Modal Dimming Fix - Radical Approach:
- Remove backdrop completely
- Create simple modal with minimal styling
- Use extremely high z-index (999999999)
- Pure black text on white background
- No CSS classes or complex styling

2. Favicon Fix:
- Update index.html to use youtiao-icon.png consistently
- Add proper sizes for different icon types
- Update manifest.json to reference correct icon path
- Remove dependency on favicon.ico files

3. Simplified Modal:
- No backdrop dimming
- Clean white background with black border
- Simple gray buttons
- Should be impossible to miss or dim

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,12 +3,12 @@
   "name": "Wat Eat - Dinner Ordering Game",
   "icons": [
     {
-      "src": "favicon.png",
+      "src": "images/youtiao-icon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "favicon.png",
+      "src": "images/youtiao-icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
