--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,18 +3,18 @@
   "name": "Wat Eat - Dinner Ordering Game",
   "icons": [
     {
-      "src": "images/youtiao-icon.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "favicon-32x32.ico",
+      "sizes": "32x32",
+      "type": "image/x-icon"
     },
     {
-      "src": "images/youtiao-icon.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "favicon.ico",
+      "sizes": "16x16 32x32 48x48",
+      "type": "image/x-icon"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#a8b5a8",
-  "background_color": "#ffffff"
+  "theme_color": "#2C3E50",
+  "background_color": "#F8F8F8"
 }
